SUBDIRS = mesher distributed-mesher

all-local: logo

logo:
	@echo " *============================================================*"
	@echo "         ___                                            ___    " 
	@echo "        /  /               ___________                 /  /    "
	@echo "     __/  /_ ___    ___   /__  __  __/__    __ ____   /  /     " 
	@echo "    /_   __// _  \\ / _  \\   / / / /   \\ \\  / // _  \\ /  / " 
	@echo "     /  /_ / /_/ // /_/ /__/ /_/ /__   \\ \\/ // /_/ //  /__   " 
	@echo "     \\___/ \\____// ____//__________/    \\__/ \\____/ \\____/" 
	@echo "                / /                                            " 
	@echo "               /_/                                             "
	@echo " *============================================================*"

clean-local:
	@echo "*============================================================*"
	@echo " Cleaning files in :"; pwd
	@echo "*============================================================*"
	rm  -f *~

check-local:
